<?xml version="1.0" encoding="utf-8"?>


    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
    android:weightSum="12">

        <TableRow android:layout_weight="1">

            <RadioGroup
                android:layout_margin="20dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:id="@+id/rb_left"
                    android:text="第1到16次"
                    android:textSize="30sp"
                    android:selectAllOnFocus="true"/>

                <RadioButton
                    android:id="@+id/rb_right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="第17到31次"
                    android:textSize="30sp" />

            </RadioGroup>
        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="第01次"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#00AACC"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="第02次"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#00AACC"
                android:textSize="26sp" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="第03次"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#00AACC"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="第04次"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#00AACC"
                android:textSize="26sp" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="第05次"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#00AACC"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="第06次"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#00AACC"
                android:textSize="26sp" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="第07次"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#00AACC"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="第08次"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#00AACC"
                android:textSize="26sp" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_margin="10dp"

                android:layout_weight="1"
                android:text="第09次"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#00AACC"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="第10次"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#00AACC"
                android:textSize="26sp" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="第11次"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#00AACC"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="第12次"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#00AACC"
                android:textSize="26sp" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_margin="10dp"

                android:layout_weight="1"
                android:text="第13次"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#00AACC"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="第14次"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#00AACC"
                android:textSize="26sp" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="第15次"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#00AACC"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="第16次"
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#00AACC"
                android:textSize="26sp" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="失真度："
                android:textSize="26sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#00AACC"
                android:gravity="left"

                android:textSize="26sp" />


        </TableRow>

        <TableRow android:layout_weight="1">

            <RadioGroup
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/u1"
                    android:textSize="26sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/u2"
                    android:textSize="26sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/u3"
                    android:textSize="26sp" />
            </RadioGroup>
        </TableRow>

        <TableRow android:layout_weight="1">

            <RadioGroup
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:textSize="26sp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/i1"
                    android:textSize="26sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/i2"
                    android:textSize="26sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/i3"
                    android:textSize="26sp" />
            </RadioGroup>
        </TableRow>
    </TableLayout>
